--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,4 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
 // app global css in SCSS form
 body:not(.q-body--layout-animate) .q-layout--prevent-focus {
   visibility: visible;
+}
+
+h1 {
+  color: rgb(16, 24, 40);
+  font-family: Inter;
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 40px;
+  margin: 0;
 }
